<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toTopOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/avatar_image"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/user_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:textSize="18sp"
                        tools:text="NAME"
                        android:textAlignment="center"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/user_image" />

                    <TextView
                        android:id="@+id/user_bio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/user_name"
                        app:layout_constraintStart_toStartOf="@+id/user_name"
                        app:layout_constraintTop_toBottomOf="@+id/user_name"
                        tools:text="BIO" />

                    <TextView
                        android:id="@+id/user_followers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toStartOf="@+id/user_following"
                        app:layout_constraintStart_toStartOf="@+id/user_bio"
                        app:layout_constraintTop_toBottomOf="@+id/user_bio"
                        tools:text="Followers" />

                    <TextView
                        android:id="@+id/user_following"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="@+id/user_bio"
                        app:layout_constraintStart_toEndOf="@+id/user_followers"
                        app:layout_constraintTop_toBottomOf="@+id/user_bio"
                        tools:text="Following" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/user_followers" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="User repositories"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/constraints"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraints"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <ProgressBar
                            android:id="@+id/progress_bar_repositories"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            tools:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_repositories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:visibility="visible" />

                    </androidx.constraintlayout.widget.ConstraintLayout>





                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>



        </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>